@startuml RejectInstructorApplication_ClassDiagram

' Styling & Settings
skinparam style strictuml
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor #1A73E8
    ArrowColor #5F6368
}

!define ABSTRACT_COLOR #FFE6CC
!define SERVICE_COLOR #CCE5FF
!define DTO_COLOR #E6CCFF
!define ENTITY_COLOR #CCFFE6
!define REPOSITORY_COLOR #FFFFCC
!define CONTROLLER_COLOR #FFE6E6
!define DbContext #E6F3FF

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F9F9F9
skinparam classBorderColor #333333
skinparam arrowColor #333333

' ==================== FRONTEND ====================

class "AdminApprovalController" as AdminApprovalControllerFE <<frontend controller>> #FFE6E6 {
    + Process(id: int, status: string, reason: string?) : Task<IActionResult>
}

' ==================== BACKEND - CONTROLLER ====================

class "AdminApprovalController" as AdminApprovalControllerBE <<backend controller>> #FFE6E6 {
    - _service : IInstructorApprovalService
    + Process(dto: UpdateApprovalStatusDto) : Task<IActionResult>
}

' ==================== BACKEND - DTOs ====================

class UpdateApprovalStatusDto #E6CCFF {
    + InstructorId : int
    + Status : string
    + Reason : string?
}

' ==================== BACKEND - DOMAIN ENTITIES ====================

class Instructor #CCFFE6 {
    + InstructorId : int
    + ProfessionalTitle : string?
    + ExpertiseCategories : string?
    + LinkedinUrl : string?
    + YoutubeUrl : string?
    + FacebookUrl : string?
    + DocumentUrl : string?
    + ApprovalStatus : string?
    + RejectionReason : string?
    + StripeAccountId : string?
    + StripeOnboardingStatus : string?
    + PayoutsEnabled : bool?
    + ChargesEnabled : bool?
    + StripeCountry : string?
}

class User #CCFFE6 {
    + UserId : int
    + FullName : string
    + Bio : string?
    + DateOfBirth : DateOnly?
}

class Account #CCFFE6 {
    + AccountId : int
    + Email : string
    + Username : string?
    + PasswordHash : string?
    + PhoneNumber : string?
    + AccountStatus : string?
    + AccountFlagCount : int?
    + AccountLastLoginAt : DateTime?
    + AuthProvider : string?
    + AvatarUrl : string?
    + RefreshToken : string?
    + RefreshTokenExpiryTime : DateTime?
    + IsVerified : bool
    + AccountCreatedAt : DateTime?
    + AccountUpdatedAt : DateTime?
}

' ==================== BACKEND - SERVICE INTERFACES ====================

interface IInstructorApprovalService #FFE6CC {
    //+ ApproveOrRejectAsync(dto: UpdateApprovalStatusDto) : Task<bool>//
}

interface INotificationService #FFE6CC {
    //+ SendNotificationAsync(receiverId: int, title: string, content: string, linkAction: string?) : Task<bool>//
}

' ==================== BACKEND - REPOSITORY INTERFACES ====================

interface IInstructorRepository #FFE6CC {
    //+ GetByIdAsync(id: int) : Task<Instructor?>//
    //+ Update(instructor: Instructor) : void//
    //+ SaveChangesAsync() : Task<int>//
}

' ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class InstructorApprovalService #CCE5FF {
    - _repo : IInstructorRepository
    - _notiService : INotificationService
    + ApproveOrRejectAsync(dto: UpdateApprovalStatusDto) : Task<bool>
}

' ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class InstructorRepository #FFFFCC {
    - _context : AppDbContext
    + GetByIdAsync(id: int) : Task<Instructor?>
    + Update(instructor: Instructor) : void
    + SaveChangesAsync() : Task<int>
}

' ==================== BACKEND - DbContext ====================

class AppDbContext #E6F3FF {
    + Instructors : DbSet<Instructor>
    + Users : DbSet<User>
    + Accounts : DbSet<Account>
    ---
    # OnConfiguring(optionsBuilder: DbContextOptionsBuilder) : void
    # OnModelCreating(modelBuilder: ModelBuilder) : void
}

' ==================== RELATIONSHIPS ====================

' === COMPOSITION ===
Account *-- User
User *-- Instructor

' === UNIDIRECTIONAL ASSOCIATION ===
AdminApprovalControllerBE --> IInstructorApprovalService
InstructorApprovalService --> IInstructorRepository
InstructorApprovalService --> INotificationService
InstructorRepository --> AppDbContext

' === INTERFACE REALIZATION ===
InstructorApprovalService ..|> IInstructorApprovalService
InstructorRepository ..|> IInstructorRepository

' === DEPENDENCY ===
AdminApprovalControllerFE ..> AdminApprovalControllerBE
AdminApprovalControllerBE ..> UpdateApprovalStatusDto
InstructorApprovalService ..> UpdateApprovalStatusDto
InstructorRepository ..> Instructor

@enduml
